# libsoundiopp

./: .gitignore  CMakeLists.txt  README.md
include/soundiopp/: enums.h  soundiopp.h
src/: channellayout.cpp  context.cpp  device.cpp  instream.cpp  outstream.cpp  ringbuffer.cpp  soundiopp.cpp  templates.h
